force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <description>(Hours × Rate) OR (Qty × Unit Price)</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(Hours__c)),
        NOT(ISBLANK(Rate__c))
    ),
    Hours__c * Rate__c,
    Quantity__c * Unit_Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>