force-app/main/default/objects/Invoice_Line_Item__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If billing task-wise</description>
    <label>Task Type</label>
    <referenceTo>Task_Type__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>